ui misaligned but more simple functions work disable button to prevent spam

--- a/falcon_client/stylesheet.css
+++ b/falcon_client/stylesheet.css
@@ -9,3 +9,8 @@
     height: 40px;
     line-height: 0;
 }
+
+.justify-content-center .dropdown-menu {
+   left: 50%;
+   transform: translateX(-50%);
+}
